--- a/Website/includes/footer.html
+++ b/Website/includes/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-dark" style="width: 100%; bottom: 0; position: fixed;">
+<div class="bg-dark" style="width: 100%; bottom: 0; position: fixed">
     <p class="text-warning">
         Copyright &copy; <a class="text-info" href="#">Plain and Simple</a> 2007 | 
         Designed by <a class="text-info" href="http://www.edg3.co.uk/">edg3.co.uk</a> | 
