--- a/Website/includes/footer.html
+++ b/Website/includes/footer.html
@@ -1,4 +1,4 @@
-<div class="bg-dark" style="width: 100%; bottom: 0; position: fixed">
+<div class="bg-dark fixed-bottom" style="height: 2em">
     <p class="float-left text-warning">
         Copyright &copy; <a class="text-info" href="#">Plain and Simple</a> 2007 | 
         Designed by <a class="text-info" href="http://www.edg3.co.uk/">edg3.co.uk</a> | 
@@ -6,5 +6,5 @@
         Valid <a class="text-info" href="http://jigsaw.w3.org/css-validator/">CSS</a> &amp;
         <a class="text-info" href="http://validator.w3.org/">XHTML</a>
     </p>
-    <a class="float-right btn btn-secondary" href="#top"><i class="fa fa-arrow-circle-up" aria-hidden="true"></i></a>
+    <a class="float-right btn btn-secondary" href="#top" style="height: 100%"><i class="fa fa-arrow-circle-up" aria-hidden="true"></i></a>
 </div>
