--- a/Website/includes/footer.html
+++ b/Website/includes/footer.html
@@ -1,10 +1,12 @@
 <div class="bg-dark fixed-bottom" style="height: 2em">
-    <p class="float-left text-warning">
-        Copyright &copy; <a class="text-info" href="#">Plain and Simple</a> 2007 | 
-        Designed by <a class="text-info" href="http://www.edg3.co.uk/">edg3.co.uk</a> | 
-        Sponsored by <a class="text-info" href="http://www.opendesigns.org/">Open Designs</a> | 
-        Valid <a class="text-info" href="http://jigsaw.w3.org/css-validator/">CSS</a> &amp;
-        <a class="text-info" href="http://validator.w3.org/">XHTML</a>
-    </p>
+    <div class="float-left text-warning col-11 hmarquee">
+        <p>
+            Tác giả: <b class="text-info">Trần Huy Thịnh</b>
+            <span class="text-success"> -- </span>
+            Email: <b class="text-info">tranhuythinh97@gmail.com</b>
+            <span class="text-success"> -- </span>
+            Điện thoại: <b class="text-info">0968210755</b>
+        </p>
+    </div>
     <a class="float-right btn btn-secondary" href="#top" style="height: 100%"><i class="fa fa-arrow-circle-up" aria-hidden="true"></i></a>
 </div>
