Moving texts stop on hover

--- a/Website/includes/headtag.html
+++ b/Website/includes/headtag.html
@@ -16,6 +16,7 @@
                 padding-left: 100%;
                 animation: hmarquee 30s linear infinite;
             }
+            .hmarquee p:hover{animation-play-state:paused;}
             @keyframes hmarquee {
                 0%   { transform: translate(0, 0); }
                 100% { transform: translate(-101%, 0); }
