Author can not delete their own account Fixed index side menu marquee timing Finished translating pages

--- a/Website/includes/headtag.html
+++ b/Website/includes/headtag.html
@@ -18,7 +18,7 @@
             }
             .hmarquee p:hover{animation-play-state:paused;}
             @keyframes hmarquee {
-                0%   { transform: translate(0, 0); }
+                0%   { transform: translate(2%, 0); }
                 100% { transform: translate(-101%, 0); }
             }
         </style>
